--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Ionic Barcode Scanner
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -11,4 +11,12 @@
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
+
+  <div *ngIf="results">
+	<p>{{ results.text }}</p>
+	<p>{{ results.format }}</p>
+	<p>{{ results.cancelled }}</p>
+  </div>
+
+  <button ion-button (click)='scanBarcode()'>Scan barcode</button>
 </ion-content>
